# Memory-AI-Scrapbook

./: .gitignore  .replit  Claude Memory App Refactor Instructions.md  Claude Memory App Refactor.md  Pasted--Fix-Authentication-Issue-TASK-Resolve-Missing-Authorization-Header-error-FILE-UPDATES-2-EXECU-1726723880370.txt  Pasted--Memory-App-Updates-Login-and-Dashboard-Fixes-TASK-Fix-login-issues-resolve-dashboard-errors-a-1726724627806.txt  Search Functionality Instructions.md  Search Implementation Instructions.md  Vanilla JS Dashboard.js  forms.py  main.py  pasted_text_1726129849595.txt  pasted_text_1726132144798.txt  pasted_text_1726132667264.txt  pyproject.toml  replit.nix
.github/workflows/: sync.yml
static/css/: base.css  common.css  dashboard.css  style.css
static/css/components/: buttons.css  cards.css  forms.css
static/css/layouts/: footer.css  header.css
static/css/pages/: dashboard.css  login.css  signup.css
static/js/: audio_upload.js  dashboard.js  login.js  script.js  search.js  signup.js
templates/: 404.html  500.html  dashboard.html  index.html  login.html  memory_detail.html  search_results.html  signup.html
