[tool.poetry]
name = "repl-nix-memoryscrapbookdashboard"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-wtf = "^1.2.1"
flask-bcrypt = "^1.0.1"
flask-session = "^0.8.0"
flask-jwt-extended = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
